packages/errors/test/_ava-noses.config.js
export default {
  require: ['ses'],
  files: ['test/**/*.test.*', '!test/ses0_18_3.test.js'],
  timeout: '2m',
};
